# basic-chat

./: Cargo.toml  Dockerfile  fly.toml  litefs.yml
.github/workflows/: fly-deploy.yml
src/: main.rs  msg.rs  websocket.rs
