[package]
name = "basic-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
dotenv = "0.15.0"
rusqlite = "0.32.1"
rusqlite_migration = "1.3.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
tokio-rusqlite = "0.6.0"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing-subscriber = "0.3.18"
uuidv7 = "0.1.4"
